More website cleanup like no auto Rotation for shop and some funny stuff for laughs

--- a/index.html
+++ b/index.html
@@ -114,13 +114,12 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Card Title</h5>
+                        <h5 class="card-title">Michael Harvy</h5>
                         <p class="">
-                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                          hard, It
-                          feels pretty soft! " </blockquote>
+                        <blockquote>" To think I would be the proud owner of a ingenous Orcopia Schist exhumend from the
+                          200m below sea level!! I'm set for live" </blockquote>
                         <small class="text-secondary card-text">Last
-                          updated 3 mins ago</small>
+                          updated 5 years ago</small>
                       </div>
                     </div>
                   </div>
@@ -137,13 +136,34 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Card Title</h5>
+                        <h5 class="card-title">Le-ann Moldavi</h5>
                         <p class="">
-                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                          hard, It
-                          feels pretty soft! " </blockquote>
+                        <blockquote>" WoW! These rocks are good for SO many things, Except throwing. But wow can they
+                          fly through the AIR!" </blockquote>
                         </p>
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <small class="text-muted">Last updated every 5 seconds ago</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item ">
+              <div class="d-flex justify-content-center align-items-center">
+                <!--Carousel 1-->
+                <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                  <div class="row no-gutters">
+                    <div class="col-md-4 text-center my-auto pt-5">
+                      <img src="images/OhmygodyesSponge.jpeg" class="rounded-circle" alt="">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Bob Pants</h5>
+                        <p class="">
+                        <blockquote>" My friend thought my collection from Rock and Roll was a boulder. I told
+                          him "Thats not a boulder, ITS A ROCK, A great big roock " </blockquote>
+                        </p>
+                        <small class="text-muted">Last updated 5 years from now</small>
                       </div>
                     </div>
                   </div>
@@ -167,70 +187,77 @@
   <!--Multiple Item Carousel-->
   <section class="RockShop">
     <div class="" style="background-color:#E9D4CA;">
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active border text-center">
-            <img src="images/Granite/Freakin_Granite.jpeg" class="img-fluid  px-5 " alt="...">
-            <img src="images/Granite/Dude_AI_is_Insane.jpeg" class="img-fluid px-5 d-none d-md-inline rounded" alt="">
-            <img src="images/Granite/Granite_1.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline rounded" alt="">
-            <img src="images/Granite/Granite_2.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline" alt="">
-            <div class="carousel-caption ">
-              <h3>Granite</h3>
-              <p>75$ per Sq Ft</p>
-              <p>Custom Cuts: Price determined after consultation</p>
+      <div class="py-5">
+        <h1 class="text-center">The Rock Shop</h1>
+        <p class="text-center">Browse our selections of rocks</p>
+      </div>
+      <div class="py-5 rounded" style="background-color: #81482C;">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="false">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active text-center">
+              <img src="images/Granite/Freakin_Granite.jpeg" class="img-fluid  px-5 " alt="...">
+              <img src="images/Granite/Dude_AI_is_Insane.jpeg" class="img-fluid px-5 d-none d-md-inline rounded" alt="">
+              <img src="images/Granite/Granite_1.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline rounded"
+                alt="">
+              <img src="images/Granite/Granite_2.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline" alt="">
+              <div class="carousel-caption ">
+                <h3>Granite</h3>
+                <p>75$ per Sq Ft</p>
+                <p>Custom Cuts: Price determined after consultation</p>
+              </div>
+
+
             </div>
+            <div class="carousel-item text-center">
+              <img src="images/LimeStone/LimeStone_1.jpeg" class="img-fluid px-5  " alt="...">
+              <img src="images/LimeStone/LimeStone_2.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
+              <img src="images/LimeStone/LimeStone_3.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+              <img src="images/LimeStone/LimeStone_Excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+              <div class="carousel-caption ">
+                <h3>LimeStone</h3>
+                <p>250$ per Sq Ft</p>
+                <p>Custom Cuts: Price determined after consultation</p>
+              </div>
 
-
-          </div>
-          <div class="carousel-item text-center">
-            <img src="images/LimeStone/LimeStone_1.jpeg" class="img-fluid px-5  " alt="...">
-            <img src="images/LimeStone/LimeStone_2.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
-            <img src="images/LimeStone/LimeStone_3.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
-            <img src="images/LimeStone/LimeStone_Excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
-            <div class="carousel-caption ">
-              <h3>LimeStone</h3>
-              <p>250$ per Sq Ft</p>
-              <p>Custom Cuts: Price determined after consultation</p>
             </div>
+            <div class="carousel-item text-center">
+              <img src="images/Marble/AMarble_dang.jpeg" class="img-fluid px-5 " alt="...">
+              <img src="images/Marble/Marble.jpeg " class="img-fluid px-5  d-none d-md-inline" alt="">
+              <img src="images/Marble/Marble_2.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+              <img src="images/Marble/Marble_excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+              <div class="carousel-caption">
+                <h3>Marble</h3>
+                <p>500$ per sq ft
+                </p>
+                <p>Custom Cuts: Price determined after consultation</p>
+              </div>
 
-          </div>
-          <div class="carousel-item text-center">
-            <img src="images/Marble/AMarble_dang.jpeg" class="img-fluid px-5 " alt="...">
-            <img src="images/Marble/Marble.jpeg " class="img-fluid px-5  d-none d-md-inline" alt="">
-            <img src="images/Marble/Marble_2.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
-            <img src="images/Marble/Marble_excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
-            <div class="carousel-caption">
-              <h3>Marble</h3>
-              <p>500$ per sq ft
-              </p>
-              <p>Custom Cuts: Price determined after consultation</p>
             </div>
+            <div class="carousel-item text-center">
+              <img src="images/Stromatolite/Sculpture_Stromatolie.jpeg" class="img-fluid px-5 " alt="...">
+              <img src="images/Stromatolite/Fire_stromatolie.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
+              <div class="carousel-caption ">
+                <h3>Stromatolite</h3>
+                <p>Price determined after consultation</p>
+              </div>
 
-          </div>
-          <div class="carousel-item text-center">
-            <img src="images/Stromatolite/Sculpture_Stromatolie.jpeg" class="img-fluid px-5 " alt="...">
-            <img src="images/Stromatolite/Fire_stromatolie.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
-            <div class="carousel-caption ">
-              <h3>Stromatolite</h3>
-              <p>Price determined after consultation</p>
             </div>
-
           </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
     </div>
   </section>
@@ -240,10 +267,10 @@
       <h1 class="text-center">Rock Knowledge Search</h1>
       <p class="text-center">What rocks might you be in interested in?</p>
       <div>
-        <div class="dropdown mx-3 text-center rounded" style="height: 100px; background-color: #81482C;">
+        <div class="dropdown mx-3 text-center rounded" style="height: 100px;">
           <button class="btn btn-lg dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Rock type
+            Select Rock type
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
             <button class="dropdown-item" type="button" onclick="showGenre(this)">Igneous</button>
