--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <li data-target="#Slides" data-slide-to="0" class="active"></li>
             <li data-target="#Slides" data-slide-to="1"></li>
             <li data-target="#Slides" data-slide-to="2"></li>
+            <li data-target="#Slides" data-slide-to="4"></li>
           </ol>
           <div class="carousel-inner d-flex align-items-center" data-interval="5000"
             style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
