Omg Ok done foreal i think

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#RockKnowledge" class="nav-link text-right " style="color:#E9D4CA;">Rock Knowledge </a>
                 <a href="#EsteemedRock" class="nav-link text-right" style="color: #81482C;">The Esteemed Rock
                 </a>
-                <a href="#home" class="nav-link text-right" style="color:#E9D4CA;">The Rock Block</a>
+                <a href="#footer" class="nav-link text-right" style="color:#E9D4CA;">The Rock Block</a>
                 </ul>
               </div>
 
@@ -186,7 +186,7 @@
     </div>
   </section>
   <!--Multiple Item Carousel-->
-  <section class="RockShop">
+  <section id="RockShop">
     <div class="" style="background-color:#E9D4CA;">
       <div class="py-5">
         <h1 class="text-center">The Rock Shop</h1>
@@ -475,10 +475,11 @@
           contributions to WWE and professional wrestling will be remembered as a defining chapter in the history of the
           sport.</p>
       </div>
+      <p class="text-center pt-5 text-white">Please Check out our links below and have a nice day!</p>
     </div>
   </section>
   <!--Footer-->
-  <section>
+  <section id="footer">
     <div class="container-fluid pt-5 border-top-0 mb-0" style="background-color:#643822;">
       <div class=" row justify-content-center mb-5">
         <a class=" col-md-6  text-center text-white list-unstyled text-decoration-none" href="#">Rock And Roll</a>
